tests/outputfiles/rm/rm_cascade.txt
Traceback (most recent call last):
  File "/home/bogdan/Documents/INFORMATIC훯/Python/pythonbox/tests/verify/rm/../../../src/main.py", line 280, in <module>
    main()
  File "/home/bogdan/Documents/INFORMATIC훯/Python/pythonbox/tests/verify/rm/../../../src/main.py", line 272, in main
    ret_val = rm()
  File "/home/bogdan/Documents/INFORMATIC훯/Python/pythonbox/tests/verify/rm/../../../src/main.py", line 157, in rm
    rm_r = false
NameError: name 'false' is not defined. Did you mean: 'False'?
internal/modules/cjs/loader.js:818
  throw err;
  ^

Error: Cannot find module '/home/bogdan/Documents/INFORMATIC훯/Python/pythonbox/tests/verify/rm/verify/rm/rm.js'
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:815:15)
    at Function.Module._load (internal/modules/cjs/loader.js:667:27)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:60:12)
    at internal/main/run_main_module.js:17:47 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}
